RESOLVED FIXED260260
[GTK][WPE] Crash in `DrawingAreaCoordinatedGraphics::display()`in debug builds
https://bugs.webkit.org/show_bug.cgi?id=260260
Summary [GTK][WPE] Crash in `DrawingAreaCoordinatedGraphics::display()`in debug builds
Vitaly Dyackhov
Reported 2023-08-16 08:25:42 PDT
ASSERTION FAILED: !m_inUpdateGeometry /app/webkit/Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp(699) : void WebKit::DrawingAreaCoordinatedGraphics::display()
Attachments
Vitaly Dyackhov
Comment 1 2023-08-16 08:37:26 PDT
EWS
Comment 2 2023-08-17 00:15:19 PDT
Committed 266992@main (1b2a91b0241e): <https://commits.webkit.org/266992@main> Reviewed commits have been landed. Closing PR #16743 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.