Cherry-pick 266992@main (1b2a91b0241e). https://bugs.webkit.org/show_bug.cgi?id=260260

[GTK][WPE] Crash in `DrawingAreaCoordinatedGraphics::display()`in debug builds
    https://bugs.webkit.org/show_bug.cgi?id=260260

    Reviewed by Carlos Garcia Campos.

    `DrawingAreaCoordinatedGraphics::forceRepaint()`, which, in turn, can call
    `DrawingAreaCoordinatedGraphics::display()`, can be called while being
    in the middle of resizing.

    We can just ignore it because repainting will happen after resizing anyway.

    * LayoutTests/platform/glib/TestExpectations:
    * Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp:
    (WebKit::DrawingAreaCoordinatedGraphics::forceRepaint):

    Canonical link: https://commits.webkit.org/266992@main